# passport-photo-specs

./: .gitignore  CHANGELOG.md  README.md  package.json
python/: LICENSE  README.md  pyproject.toml
python/src/passport_photo_specs/: __init__.py
python/src/passport_photo_specs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_basic.py
specs/: specs.json
