[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passport-photo-specs"
version = "1.3.0"
description = "Canonical passport, visa, and ID document photo specifications validated against 15+ official government sources. 100+ countries, 248 document formats."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "whitetirocket", email = "hello@idphotosnap.com"}
]
keywords = [
    "passport",
    "visa",
    "passport-photo",
    "visa-photo",
    "icao-9303",
    "biometric",
    "specifications",
    "dataset",
    "open-data",
    "immigration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://idphotosnap.com"
Repository = "https://github.com/whitetirocket/passport-photo-specs"
Documentation = "https://github.com/whitetirocket/passport-photo-specs#readme"
"Bug Tracker" = "https://github.com/whitetirocket/passport-photo-specs/issues"
"Open Dataset (Zenodo DOI)" = "https://doi.org/10.5281/zenodo.20409880"
Changelog = "https://github.com/whitetirocket/passport-photo-specs/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
passport_photo_specs = ["specs.json", "py.typed"]
